--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,27 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.adgear.vendor</groupId>
   <artifactId>zql</artifactId>
-  <version>0.0.6</version>
+  <version>0.0.7-SNAPSHOT</version>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <releaseRepoUrl>${adgearReleasePublishUrl}</releaseRepoUrl>
+    <snapshotRepoUrl>${adgearSnapshotPublishUrl}</snapshotRepoUrl>
   </properties>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>adgear-snapshots-repository</id>
+      <name>Adgear's snapshots repository</name>
+      <url>${snapshotRepoUrl}</url>
+    </snapshotRepository>
+    <repository>
+      <id>adgear-releases-repository</id>
+      <name>Adgear's releases repository</name>
+      <url>${releaseRepoUrl}</url>
+    </repository>
+  </distributionManagement>
 
   <build>
     <plugins>
